<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project.company.com.historyweathertest.activity.HistoryActivity">

    <RelativeLayout
        android:id="@+id/rl_tool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:padding="13dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/ic_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="24dp"
            android:layout_toEndOf="@+id/iv_back"
            android:text="@string/app_name"
            android:textColor="@color/grey"
            android:textSize="24sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_history_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/temperature_max"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/temperature_max"
        style="@style/WeatherTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:drawableStart="@drawable/temperature"
        android:padding="@dimen/main_padding"
        android:text="@string/temperature_max" />

    <TextView
        android:id="@+id/tv_temperature_max"
        style="@style/WeatherTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/temperature_max"
        android:layout_toEndOf="@+id/temperature_max"
        android:padding="@dimen/main_padding" />

    <TextView
        android:id="@+id/temperature_min"
        style="@style/WeatherTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temperature_max"
        android:layout_centerVertical="true"
        android:drawableStart="@drawable/temperature"
        android:padding="@dimen/main_padding"
        android:text="@string/temperature_min" />

    <TextView
        android:id="@+id/tv_temperature_min"
        style="@style/WeatherTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/temperature_min"
        android:layout_toEndOf="@+id/temperature_min"
        android:padding="@dimen/main_padding" />

</RelativeLayout>
